# projeto-dados-agencia-nacional-aviacao-civil

./: .env-example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: db_config.py
dags/: download_new_data.py
data/processed/: processed_files.txt
src/: extract.py  load.py  transform.py
