[tool.poetry]
name = "projeto-dados-agencia-nacional-aviacao-civil"
version = "0.1.0"
description = ""
authors = ["juniorsilvacc <juniorsilvacc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
pandas = "^2.2.3"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
streamlit = "^1.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
